styles/style.css
/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */

.page {
  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
  background-color: var(--bg-color, #000028);
  background-image: var(--bg-image, url(../images/cover-image-dark.png));
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: var(--text-color, #f1b2ce);
  font-family: var(--main-font), sans-serif;
  font-size: 1.125rem;
  line-height: 1.3;
}

.header {
  block-size: 100vb;
  min-block-size: 668px;
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  padding: var(--padding);
  margin-block-end: var(--hf-margin);
}

.header__theme-menu {
  justify-self: center;
}

.header__theme-menu-list {
  align-self: end;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 23px;
}

.header__theme-menu-button {
  border: none;
  background-color: transparent;
  color: var(--accent-text-color);
  text-transform: lowercase;
}

.header__theme-menu-button:hover {
  border: 1px solid rgb(from var(--accent-text-color) r g b / 40%);
}

.header__theme-menu-button:focus {
  border-block-end: 1px solid var(--accent-text-color);
}

.header__theme-menu-button_active {
  border: 1px solid var(--accent-text-color);
}

.header__title {
  justify-self: start;
}

.title-decor {
  font-size: 1.125rem;
}

.title {
  color: var(--title-color, #db00ff);
  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
  font-weight: bold;
  line-height: 0.83;
  text-shadow: 4px 4px 0 var(--accent-color);
  margin-block: auto;
  margin-inline-start: -0.1em;
}

.header__text-container {
  margin-block: auto;
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.header__text {
  justify-self: end;
  align-self: start;
  block-size: fit-content;
  grid-column: 2;
  color: var(--subtitle-color);
  background-color: var(--accent-color);
  font-weight: bold;
}

.decorated-zone {
  position: relative;
}

.decorated-zone::after,
.decorated-zone::before {
  content: "";
  position: absolute;
  block-size: 25px;
  inline-size: 25px;
}

.decorated-zone::before {
  border-block-start: 1px solid var(--accent-text-color);
  border-inline-end: 1px solid var(--accent-text-color);
  inset-inline-end: var(--padding);
  inset-block-start: var(--padding);
}

.decorated-zone::after {
  border-block-end: 1px solid var(--accent-text-color);
  border-inline-start: 1px solid var(--accent-text-color);
  inset-inline-start: var(--padding);
  inset-block-end: var(--padding);
}

.header__decoration {
  position: absolute;
  inset-block-start: var(--padding);
  inset-inline-end: calc(var(--padding) + 1.9rem);
  color: var(--accent-color);
  font-size: 1.125em;
  line-height: 1.39;
}

.header__decoration::after {
  content: "";
  position: absolute;
  block-size: 0.5em;
  inline-size: 0.5em;
  border-radius: 50%;
  inset-inline-end: -1em;
  inset-block: 0.5em;
  background-color: var(--accent-text-color);
  box-shadow: 0 0 0.5em 0.25em var(--accent-text-color);
}

.main {
  padding-inline: var(--padding);
  display: grid;
  gap: var(--section-margin);
  margin-block-end: var(--hf-margin);
}

.main__why {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 20px;
}

.main__title {
  color: var(--accent-text-color);
}

.why {
  grid-column: 2;
}

.main__card-title {
  color: var(--subtitle-color);
  background-color: var(--accent-color);
  margin-block-end: 10px;
}

.main__what {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
}

.what {
  grid-row: 2;
}

.main__how {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 20px;
}

.how {
  grid-column: 2;
}

.main__title-how-span {
  color: var(--accent-text-color);
  grid-row: 1 / 7;
}

.main__title-how {
  color: var(--subtitle-color);
  background-color: var(--accent-color);
  block-size: fit-content;
}

.main__card-title-how {
  font-weight: normal;
  color: var(--subtitle-color);
  background-color: var(--accent-color);
  margin-block-end: 10px;
}

.main__images-container {
  display: grid;
  block-size: max(100vi, min-content);
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 260fr 315fr 433fr;
  gap: 20px;
}

.main__title-image {
  color: var(--subtitle-color);
  background-color: var(--accent-color);
  margin-block-end: 20px;
}

.image {
  object-fit: cover;
  height: 100%;
  width: 100%;
}

.sunset {
  grid-column: 1 / 3;
}

.food {
  grid-row: 1 / 3;
  grid-column: 3;
}

.tape {
  grid-row: 2 / 4;
  grid-column: 1;
}

.street {
  grid-column: 2 / 4;
}

.link {
  text-decoration: none;
  text-shadow: 2px 2px var(--accent-color);
}

.link:hover {
  text-decoration: underline;
}

.link:focus {
  border-block-end: 1 px solid var(--accent-color);
}

.link:visited {
  text-decoration: none;
}

.footer {
  block-size: 100vb;
  min-block-size: 668px;
  display: grid;
  justify-content: center;
  padding: var(--padding);
}

@media (width < 1024px) {
  .header__theme-menu {
    justify-self: end;
    align-self: center;
  }

  .header__theme-menu-list {
    grid-template-columns: min-content;
    grid-template-rows: repeat(3, 1fr);
    grid-auto-flow: column;
    gap: 10px;
  }

  .main__what {
    grid-template-columns: 1fr;
  }

  .what {
    grid-row: auto;
  }
}

@media (width < 768px) {
  :root {
    --padding: 10px;
    --hf-margin: 40px;
    --section-margin: 60px;
  }

  .title {
    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
  }

  .header__text-container {
    grid-template-columns: 1fr;
  }

  .header__text {
    grid-column: auto;
  }

  .main__why {
    grid-template-columns: 1fr;
  }

  .why {
    grid-column: auto;
  }

  .main__how {
    grid-template-columns: 1fr;
  }

  .how {
    grid-column: auto;
  }

  .main__title-how-span {
    grid-row: auto;
  }

  .main__images-container {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
  }

  .sunset {
    grid-column: auto;
  }

  .food {
    grid-row: auto;
    grid-column: auto;
  }

  .tape {
    grid-row: auto;
    grid-column: auto;
  }

  .street {
    grid-column: auto;
  }
}

